[package]
name = "sporaxis"
version = "0.0.1"
edition = "2021"
description = "Ontology-first OCI bundle assembler — declaration in; Dockerfile, referenced OCI manifest, and composition.ttl out."
license = "MIT"
repository = "https://github.com/sporaxis-com/sporaxis"
readme = "README.md"
keywords = ["oci", "ontology", "bundle", "rdf", "composition"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "sporaxis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"

[profile.release]
strip = true
lto = true
